--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "eslint-config-next": "^15.5.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3",
     "typescript": "^5"
