--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "firebase": "^12.3.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.533.0",
     "next": "15.5.2",
